--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -1,4 +1,14 @@
 <main>
+  {{#if error}}
+    <!-- In case of error, you should display div with class "errorContainer" -->
+    <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+    <div>
+      <div class="errorContainer">
+        <p>{{error.message}}</p>
+      </div>
+    </div>
+  {{/if}}
+
   <section id="details-info">
     <h1>Details</h1>
     <div class="coin-image">
