--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,10 +1,9 @@
 <main>
   <div class="wrapper">
     <div class="content">
-      <h1>BUY & <br />SELL <span>Crypto</span></h1>
-      <p>A crypto is a digital currency designed to work as a medium of
-        <br />exchange through a computer network that is not reliant on any
-        central authority.</p>
+      <h1>BUY & SELL <br /><span>Crypto</span></h1>
+      <p>A crypto is a digital currency designed to work as a medium of exchange
+        through a computer network that is not reliant on any central authority.</p>
       {{#if user}}
         <a href="/business/all" class="trade">TRADE</a>
       {{else}}
