Added real functionality to open links in new browser's tabs.

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -14,26 +14,29 @@
     <div class="addon"><p>
         This is Emil Todorinov's solution of the task for creation of MPA (Multi
         Page Application) given on
-        <a href="/business/softuni">SoftUni</a>
+        <a href="https://softuni.bg/" target="_blank">SoftUni</a>
         JavaScript Back-End
-        <a href="/business/exam">exam</a>
+        <a
+          href="https://judge.softuni.org/Contests/3484/JS-Back-End-Exam-25-Jun-2022"
+          target="_blank"
+        >exam</a>
         conducted on 25 June 2022.
       </p>
       <p>
         The application is hosted on
-        <a href="/business/heroku">Heroku</a>
+        <a href="https://www.heroku.com/" target="_blank">Heroku</a>
         and
-        <a href="/business/mongodb">MongoDB</a>
+        <a href="https://www.mongodb.com/" target="_blank">MongoDB</a>
         is used as database.
       </p>
       <p>
-        <a href="/requirements">Crypto Trade_requirements</a>
+        <a href="/business/requirements">Crypto Trade_requirements</a>
         - clicking on the link will open a new tab which will display the
         requirements for this MPA (Multi Page Application).
       </p>
       <p>
         Link to
-        <a href="/business/github">GitHub</a>
+        <a href="https://github.com/" target="_blank">GitHub</a>
         for code review may be provided upon request.
       </p>
     </div>
