Added functionality to open Crypto-Trade requirements page in new browser tab

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -30,7 +30,8 @@
         is used as database.
       </p>
       <p>
-        <a href="/business/requirements">Crypto Trade_requirements</a>
+        <a href="/business/requirements" target="_blank">Crypto
+          Trade_requirements</a>
         - clicking on the link will open a new tab which will display the
         requirements for this MPA (Multi Page Application).
       </p>
