--- a/src/static/css/requirements.css
+++ b/src/static/css/requirements.css
@@ -51,3 +51,12 @@
   border-width: 1px;
   border-radius: 6px;
 }
+
+.addon-two span {
+  font-weight: bold;
+}
+
+.addon-two .underlined {
+  font-weight: bold;
+  text-decoration: underline;
+}
