--- a/src/static/css/requirements.css
+++ b/src/static/css/requirements.css
@@ -61,6 +61,10 @@
   text-decoration: underline;
 }
 
-.addon-two .not-initial{
+.addon-two .not-initial {
   color: aquamarine;
+}
+
+.addon-two .coingecko {
+  color: yellow;
 }
