Corrected the file extension of the picture for error displayed if an initial coin deletion is attempted.

--- a/src/views/requirements.hbs
+++ b/src/views/requirements.hbs
@@ -244,7 +244,7 @@
             delete functionality one
             should create his own coin by registering a user or by using any of the default users - userOne
             (abv@abv.bg), userTwo (gbg@gbg.bg) or userThree (abv@gbg.bg).</p>
-        <img src="../static/images/Picture22.jpg" alt="">
+        <img src="../static/images/Picture22.JPG" alt="">
 
 
         <h5>Edit Offer (logged in user and owner of the current offer)</h5>
